Bug 483164 - Web shortcuts do not show icons
Summary: Web shortcuts do not show icons
Status: RESOLVED FIXED
Alias: None
Product: krunner
Classification: Plasma
Component: webshortcuts (other bugs)
Version First Reported In: master
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Alexander Lohnau
URL:
Keywords: qt6
Depends on:
Blocks:
 
Reported: 2024-03-10 20:22 UTC by Thiago Sueto
Modified: 2024-03-19 20:37 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Thiago Sueto 2024-03-10 20:22:49 UTC
SUMMARY
When attempting to use any web shortcut, the icon that was supposed to show up in the listing to the left side of the query is missing.

STEPS TO REPRODUCE
1. Alt+Space to open KRunner
2. Try "google: blep"

OBSERVED RESULT
No icon next to query.

SOFTWARE/OS VERSIONS
Operating System: openSUSE Tumbleweed 20240308
KDE Plasma Version: 6.0.80
KDE Frameworks Version: 6.0.0
Qt Version: 6.6.2
Kernel Version: 6.7.7-1-default (64-bit)
Graphics Platform: Wayland
Processors: 4 × Intel® Core™ i5-7200U CPU @ 2.50GHz
Memory: 15.5 GiB of RAM
Graphics Processor: Mesa Intel® HD Graphics 620
Manufacturer: Dell Inc.
Product Name: Inspiron 5567
Comment 1 Bug Janitor Service 2024-03-14 20:19:19 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/kio/-/merge_requests/1578
Comment 2 Alexander Lohnau 2024-03-19 20:37:00 UTC
Git commit 4d3b2ad3ce368003e531c415adbd96c8919ded3e by Alexander Lohnau.
Committed on 19/03/2024 at 20:36.
Pushed by alex into branch 'master'.

Fix webshortcuts not giving searchprovider specific icon

The icon of the provider is more specific than an icon we might determine for the URL, so we use that if available

M  +5    -2    src/gui/kurifilter.cpp
M  +1    -2    src/gui/kurifilterdata_p.h
M  +7    -2    src/gui/kurifilterplugin.cpp
M  +1    -1    src/gui/kurifilterplugin_p.h
M  +3    -3    src/urifilters/ikws/kuriikwsfilter.cpp
M  +2    -1    src/urifilters/ikws/kurisearchfilter.cpp

https://invent.kde.org/frameworks/kio/-/commit/4d3b2ad3ce368003e531c415adbd96c8919ded3e