Fix webshortcuts not giving searchprovider specific icon

The icon of the provider is more specific than an icon we might determine for the URL, so we use that if available

BUG: 483164