src/gui/kurifilterdata_p.h
@@ -6,7 +6,6 @@
 #include "kurifilter.h"
 #include <QMap>
 
-typedef QMap<QString, KUriFilterSearchProvider *> SearchProviderMap;
 class KUriFilterDataPrivate
 {
 public:
@@ -91,5 +90,5 @@ public:
 
     QStringList alternateSearchProviders;
     QStringList searchProviderList;
-    SearchProviderMap searchProviderMap;
+    QMap<QString, KUriFilterSearchProvider *> searchProviderMap;
 };
